Fix issue where resized images were distorted in chrome, firefox

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,8 @@ section button {
 
 .client-icons img {
     width: 20%;
+    height: auto;
+    object-fit: contain; /* firefox and chrome needed this specified to retain aspect ratio */
 }
 
 picture {
